# housing_search

./: .gitignore  README.md  ideas.txt  pyproject.toml  requirements.txt  test.json
data/: buy_list.json  buy_list_old.json  chicago_map.csv  chicago_neigh.csv  craigs_all.csv  craigs_kb.csv  housing.json  neighborhoods.txt  ravenswood.csv  rental_list.json  richrental_list.json  search_area.drawio  total_search_area.txt
scripts/: craig_update.py  craigs_kb.py  craigslist..py  craigslist.py  craigslist_all_listings.py  eda.py  mail_send.py  main.py  support.py  zillow.py
scripts/buyhousing/: homes.py  main.py  map_res.drawio  map_results.py  realtor.py  redfin.py  support.py  zillow.py
scripts/housing/: apartments.py  craig_update.py  craigs.py  craigslist_all_listings.py  eda.py  main.py  realtor.py  redfin.py  support.py  zillow.py
scripts/jobs/: indeed.py
scripts/kb/: craig_update.py  craigs_kb.py  twitter.py
scripts/renthousing/: apartments.py  craigs.py  explore.py  explore_idea.drawio  homes.py  main.py  realtor.py  redfin.py  search_area.drawio  support.py  test.txt  zillow.py
scripts/renthousing/oldscripts/: mainbackup8_2_24.py  term_dash.py
