[project]
name = "housing_search"
version = "0.1.0"
description = "A repo for searching rental housing"
authors = [
    {name = "Landcruiser87",email = "andyheroy@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "sodapy (>=2.2.0,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
shapely = "^2.0.7"
geopandas = "^1.0.1"
geodatasets = "^2024.8.0"

